--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,16 @@ DEBUG=
 
 SECRET_KEY=
 
+# Database
 NAME=
 USER=
 PASSWORD=
 HOST=
 PORT=
+
+#Strip
+STRIP_API_KEY=
+
+# redis
+LOCATION_REDIS=
+CACHE_ENABLED=
